# rustybar

./: Cargo.toml
src/: hosts.rs  main.rs
