[package]
name = "rustybar"
version = "0.1.0"
authors = ["Alex Nordlund <deep.alexander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
itertools = "0.9.0"
enum_derive = "0.1.7"
custom_derive = "0.1.7"
nix = "0.17.0"

[target.'cfg(freebsd)'.dependencies]
jail = "0.1.1"